# gpt-custom-chatbot

./: .env  .gitignore  Dockerfile  README.md  backend.py  frontend.py  manage.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
application/: initializer.py
application/main/: config.py
application/main/chains/: __init__.py
application/main/database/legacy/: __init__.py  db.py
application/main/database/sql/: crud.py  models.py  schemas.py
application/main/decorator/: __init__.py
application/main/routers/: _chat_commons.py  _router_models.py  chat_router.py  conversational_chat.py  doc_qa_router.py  document_question_answering.py  session_generator.py  session_router.py
application/main/scheduled_jobs/: init_jobs.py  jobs.py
application/main/services/: base_service.py  chat_service.py  chat_session_service.py  conversational_chat_service.py  doc_qa_service.py  document_question_answering_service.py
application/main/strategy/chat/: __init__.py  chat_dialogue_constructor_strategy.py
application/main/strategy/doc_qa/: __init__.py  (+1 more)
application/main/utility/: split_string.py
common/: config.py  constants.py  logging.py
common/utility/config_loader/: __init__.py  config_interface.py  read_json.py  read_yaml.py
common/utility/logger/: custom_logging.py  handlers.py
data/: openrouter_models_info.json
frontend/: api_queries.py  chat_interface_render.py  common.py  init.py  init_ui_state.py  query.py  render.py  ui_common.py  ui_events.py
frontend/constants/: __init__.py
settings/: llm_config.yaml  logging_config.yaml
(+3 files in other folders)
